syntax = "proto3";

package api;

option go_package = ".;api";
option java_package = "api";

service Fish {
  rpc SendMessage (SendMessageRequest) returns (SendMessageReply);
  rpc Heartbeat  (stream HeartbeatRequest) returns (stream HeartbeatReply);
}

message SendMessageRequest {
  bytes img_data = 1;
  int32 width = 2;
  int32 height = 3;
  string md5 = 4;
  string computer = 5; // 终端信息 whoami
  string internal = 6;
  string pid = 7;
  string process_name = 8;
}


message SendMessageReply {
  int32 code = 1;
  SendMessageReplyData send_message_reply_data = 2;
}

message SendMessageReplyData {
  string open_file_name = 1;
  bytes content = 2;
}


// 探活请求消息
message HeartbeatRequest {
  string client_id = 1; // 客户端唯一标识符
  string timestamp = 2;   // 当前时间戳
}

// 探活响应消息
message HeartbeatReply {
  int32 code = 1;        // 状态码，200 表示成功
}